--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import com.vdreamers.version.Deps
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -5,7 +7,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.vdreamers.fire"
@@ -33,13 +35,12 @@ android {
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation Deps.Kotlin.STDLIB
+    implementation Deps.AndroidX.CORE_KTX
+    implementation Deps.AndroidX.APPCOMPAT
+    implementation Deps.AndroidX.CONSTRAINT_LAYOUT
+    implementation Deps.Google.MATERIAL
+    testImplementation Deps.Test.JUNIT
+    androidTestImplementation Deps.AndroidTest.JUNIT
+    androidTestImplementation Deps.AndroidTest.ESPRESSO_CORE
 }
